Fix backwards compatibility with java 8